# rust-protobuf

./: README.md
protobuf/: Cargo.toml
protobuf-codegen/: Cargo.toml
protobuf-examples/customize-serde/: Cargo.toml
protobuf-examples/dynamic/: Cargo.toml
protobuf-examples/issue-614/: Cargo.toml
protobuf-examples/pure-vs-protoc/: Cargo.toml
protobuf-examples/vs-prost/: Cargo.toml
protobuf-json-mapping/: Cargo.toml
protobuf-parse/: Cargo.toml
protobuf-parse/examples/: file-descriptor-out-compare.rs
protobuf-parse/src/pure/: model.rs  parser.rs
protobuf-parse/src/pure/convert/: mod.rs
protobuf-support/: Cargo.toml
protoc-bin/: Cargo.toml
test-crates/perftest/bytes/: Cargo.toml
test-crates/perftest/misc/: Cargo.toml
test-crates/perftest/vs-cxx/: Cargo.toml
test-crates/protobuf-codegen-identical-test/: Cargo.toml
test-crates/protobuf-codegen-protoc-test/: Cargo.toml
test-crates/protobuf-codegen-protoc-test/src/v3/: test_enum_reserved.proto  test_enum_reserved.rs
test-crates/protobuf-codegen-pure-test/: Cargo.toml
test-crates/protobuf-fuzz/: Cargo.toml
test-crates/protobuf-parse-error-test/: Cargo.toml
test-crates/protobuf-test/: Cargo.toml
test-crates/protobuf-test-common/: Cargo.toml
