[package]

name = "protobuf-json-mapping"
version = "4.0.0-alpha.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/LYF1999/rust-protobuf/"
repository = "https://github.com/LYF1999/rust-protobuf/"
documentation = "https://github.com/LYF1999/rust-protobuf/blob/master/README.md"
description = """
JSON mapping for Protocol Buffers messages.
"""

[lib]
bench = false

[dependencies]
thiserror = "1.0.30"

protobuf = { path = "../protobuf", package = "protobuf2", version = "=4.0.0-alpha.1" }
protobuf-support = { path = "../protobuf-support", version = "=4.0.0-alpha.1", package = "protobuf-support2" }

[package.metadata.docs.rs]
all-features = true
