[package]
name = "protobuf-parse2"
version = "4.0.0-alpha.4"
edition = "2021"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
license = "MIT"
homepage = "https://github.com/LYF1999/rust-protobuf/tree/protobuf2/protobuf-parse/"
repository = "https://github.com/LYF1999/rust-protobuf/tree/protobuf2/protobuf-parse/"
description = """
Parse `.proto` files.

Files are parsed into a `protobuf::descriptor::FileDescriptorSet` object using either:
* pure rust parser (no dependencies)
* `protoc` binary (more reliable and compatible with Google's implementation)
"""

[dependencies]
tempfile  = "3.2.0"
log       = "0.4"
which     = "4.0"
anyhow    = "1.0.53"
thiserror = "1.0.30"
indexmap  = "1.8.0"

protobuf = { path = "../protobuf", package = "protobuf2", version = "=4.0.0-alpha.2" }
protobuf-support = { path = "../protobuf-support", version = "=4.0.0-alpha.2", package = "protobuf-support2" }

[lib]
# TODO: figure out what to do with bundled linked_hash_map
doctest = false

[[bin]]

name = "parse-and-typecheck"
path = "src/bin/parse-and-typecheck.rs"
test = false

[package.metadata.docs.rs]
all-features = true
