[package]

name = "protobuf2"
version = "4.0.0-alpha.1"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/LYF1999/rust-protobuf/"
repository = "https://github.com/LYF1999/rust-protobuf/"
documentation = "https://github.com/LYF1999/rust-protobuf/blob/master/README.md"
description = """
Rust implementation of Google protocol buffers
"""

[lib]
bench = false

[features]
with-bytes = ["bytes"]
default = []

[dependencies]
bytes = { version = "1.1", optional = true }
thiserror = "1.0.30"
once_cell = "1.9.0"

protobuf-support = { path = "../protobuf-support", version = "=4.0.0-alpha.1", package = "protobuf-support2" }

[package.metadata.docs.rs]
all-features = true
