[package]
name = "protoc-bin"
version = "0.0.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
license = "MIT"
homepage = "https://github.com/LYF1999/rust-protobuf/"
repository = "https://github.com/LYF1999/rust-protobuf/"
description = """
Internal crate to rust-protobuf
"""
publish = false

[lib]
doctest = false
bench = false

[dependencies]
protoc-bin-vendored = "=3.0.0"

[package.metadata.docs.rs]
all-features = true
