[package]
name = "protobuf-examples-dynamic"
version = "0.0.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
protobuf = { path = "../../protobuf", package = "protobuf2" }
protobuf-parse = { path = "../../protobuf-parse", package = "protobuf-parse2" }
tempfile = "3"
